update login page alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -259,11 +259,11 @@
   }
 
   .form-title {
-    font-size: 34px;
+    font-size: 24px;
   }
 
   .form-subtitle {
-    font-size: 18px;
+    font-size: 16px;
     color: #3d3d3d;
   }
 
